--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "swagger-ui-express": "^5.0.1",
     "sweetalert": "^2.1.2",
     "twilio": "^5.0.4",
+    "url": "^0.11.3",
     "winston": "^3.13.0"
   },
   "description": ""
